--- a/css.css
+++ b/css.css
@@ -12,9 +12,23 @@
     text-transform: uppercase;
 }
 #fondo {
-    position: fixed;
     min-height: 100%;
     min-width: 100%;
     z-index: -1;
-    margin-top: -5em;
+    margin-top: -10em;
+}
+ul{
+    list-style-type: none;
+}
+li{
+    font-size: 15px;
+    letter-spacing: 1px;
+    text-align: center;
+    text-transform: uppercase;
+}
+.nav-link {
+    color: rgb(0, 0, 0);
+}
+.nav-link:hover{
+    color: white;
 }
