--- a/css.css
+++ b/css.css
@@ -4,13 +4,16 @@
 .navbar-dark .navbar-nav .nav-link {
     color: rgb(0, 0, 0);
 }
-
+.navbar-dark .navbar-nav .nav-link:hover {
+    color: rgb(236, 22, 22);
+}
 .nav-item{
     font-size: 25px;
     letter-spacing: 1px;
     text-align: center;
     text-transform: uppercase;
 }
+
 #fondo {
     min-height: 100%;
     min-width: 100%;
@@ -31,4 +34,5 @@ li{
 }
 .nav-link:hover{
     color: white;
+    background-color: wheat;
 }
