--- a/css.css
+++ b/css.css
@@ -1,10 +1,3 @@
-.navbar-nav{
-    justify-content: end;
-}
-.navbar-dark .navbar-nav .nav-link {
-    color: rgb(0, 0, 0);
-}
-
 .nav-item{
     font-size: 25px;
     letter-spacing: 1px;
@@ -14,11 +7,26 @@
 #fondo {
     min-height: 100%;
     min-width: 100%;
-    z-index: -1;
-    margin-top: -10em;
+    width: 100%;
 }
+#fondo{
+    position: fixed;
+    top: 0;
+    z-index: 1;
+}
+
+#contenido{
+    position: fixed;
+    top: 0;
+    z-index: 2;
+}
+
 ul{
     list-style-type: none;
+}
+header{
+    position: fixed;
+    width: 100%;
 }
 li{
     font-size: 15px;
@@ -31,4 +39,8 @@ li{
 }
 .nav-link:hover{
     color: white;
+}
+
+.d-flex{
+    flex-wrap: wrap;
 }
