--- a/css.css
+++ b/css.css
@@ -1,20 +1,37 @@
 #fondo{
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: -1;
     min-height: 100%;
     min-width: 100%;
     width: 100%;
 }
 
 #contenido{
-    position: fixed;
     top: 0;
-    z-index: 2;
-}
-header{
+    z-index: 1;
     width: 100%;
-    position: fixed;
+}
+.nav-item:hover{
+    background-color: rgb(187, 198, 202);
+    border-radius: 15px;
+}
+h1{
+    margin-top: 5em;
+    font-weight: bolder;
+    font-style: italic;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+
+
+
+
+
+
+/**
+footer{
+    position: relative;
 }
 
 ul{
@@ -26,3 +43,4 @@ li{
     text-align: center;
     text-transform: uppercase;
 }
+*/
