--- a/css.css
+++ b/css.css
@@ -16,11 +16,11 @@
     background-color: rgb(187, 198, 202);
     border-radius: 15px;
 }
+
 h1{
-    margin-top: 5em;
     font-weight: bolder;
     font-style: italic;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Cambria, Cochin;
 }
 
 
