--- a/css.css
+++ b/css.css
@@ -16,6 +16,10 @@
     background-color: rgb(187, 198, 202);
     border-radius: 15px;
 }
+header{
+    position: fixed;
+    width: 100%;
+}
 
 h1{
     font-weight: bolder;
