--- a/css-2.css
+++ b/css-2.css
@@ -14,7 +14,7 @@
     font-family: 'Montserrat';
     font-size: 25px;
 }
-.nav-link:hover{
+header .nav-link:hover{
     background-color: brown;
     border-radius: 15px;
 }
