--- a/css-2.css
+++ b/css-2.css
@@ -1,15 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=League+Gothic&display=swap');
 
-.carousel-caption h3, p{
-    font-family: 'Montserrat';
-    font-size: 20px;
-    font-weight: bolder;
-    text-shadow: 
-    3px 3px 1px black,
-    5px 5px 2px black,
-    8px 8px 3px white;;
-}
 .nav-link{
     font-family: 'Montserrat';
     font-size: 25px;
@@ -41,4 +32,37 @@ header .nav-link:hover{
 .card-text{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-shadow: none;
+}
+
+.carousel-caption h3, p{
+    font-family: 'Montserrat';
+    font-weight: bolder;
+    text-shadow: 
+    3px 3px 1px black,
+    5px 5px 2px black,
+    8px 8px 3px black;;
+}
+
+@media screen and (min-width: 1080px) {
+        .carousel-item .carousel-caption p{
+        font-family: 'Montserrat';
+        font-size: 40px;
+        font-weight: bolder;
+        text-shadow: 
+        3px 3px 1px black,
+        5px 5px 2px black,
+        8px 8px 3px white;;
+    }
+}
+
+@media screen and (min-width: 1080px) {
+    .carousel-item .carousel-caption h3{
+    font-family: 'Montserrat';
+    font-size: 40px;
+    font-weight: bolder;
+    text-shadow: 
+    3px 3px 1px black,
+    5px 5px 2px black,
+    8px 8px 3px white;;
+}
 }
