--- a/css-2.css
+++ b/css-2.css
@@ -13,7 +13,7 @@ header .nav-link:hover{
 .carousel-caption{
     position: absolute;
 }
-.card:hover{
+div:nth-child(3) .card:hover{
     transform: scale(0.95, 0.95);
 }
 .mt-0 {
@@ -34,7 +34,7 @@ header .nav-link:hover{
     text-shadow: none;
 }
 
-.carousel-caption h3, p{
+.carousel-caption h3 p{
     font-family: 'Montserrat';
     font-weight: bolder;
     text-shadow: 
@@ -66,7 +66,15 @@ header .nav-link:hover{
     8px 8px 3px white;;
 }
 }
-
+main div:nth-child(4){
+    width: 100%;
+}
+@media screen and (min-width: 1080px) {
+    main div:nth-child(4){
+        width: 50%;
+        margin: 0 auto;
+    }
+}
 
 main div:nth-child(5){
     width: 100%;
@@ -76,6 +84,13 @@ main div:nth-child(5){
         width: 50%;
         margin: 0 auto;
     }
+}
+main div:nth-child(4){
+    margin: 0 auto;
+}
+.card-group > .card{
+    margin: 15px;
+    transform: none;
 }
 
 
