Queda que pongas el Classic School bonito y ver que podemos ahorrar del css

--- a/css-2.css
+++ b/css-2.css
@@ -113,3 +113,7 @@ label {
 .credit-card-div img { padding-top:10px; }
 .credit-card-div .small-font { font-size:12px; }
 .credit-card-div .pad-adjust { padding-top:10px; }
+
+.footer ul{
+    list-style-type: none;
+}
