--- a/css-2.css
+++ b/css-2.css
@@ -16,6 +16,10 @@ header .nav-link:hover{
 div:nth-child(3) .card:hover{
     transform: scale(0.95, 0.95);
 }
+
+div:nth-child(3) .card{
+    transition: 0.5s;
+}
 div:nth-child(3) .card div:last-of-type .container {
     text-align: center;
     width: 100%;
