--- a/css.css
+++ b/css.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=League+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Artifika&family=Roboto:wght@100&display=swap');
 
 .nav-link{
     font-family: 'Montserrat';
