--- a/css.css
+++ b/css.css
@@ -45,7 +45,7 @@ div:nth-child(3) .card div:last-of-type .container {
 }
 
 .carousel-caption h3 p{
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     font-weight: bolder;
     text-shadow: 
     3px 3px 1px black,
@@ -121,4 +121,8 @@ label {
 
 .footer ul{
     list-style-type: none;
+}
+
+.letraTituloYPrecio {
+    font-family: 'Artifika', sans-serif;
 }
