--- a/css.css
+++ b/css.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Artifika&family=Roboto:wght@100&display=swap');
 
 .nav-link{
-    font-family: 'Montserrat';
+    font-family: 'Montserrat' Arial, Helvetica, sans-serif;
     font-size: 25px;
 }
 header .nav-link:hover{
@@ -11,24 +11,31 @@ header .nav-link:hover{
     border-radius: 15px;
 }
 
+/*
 .carousel-caption{
     position: absolute;
 }
+*/
+div:nth-child(3) .card{
+    transition: 0.5s;
+}
+
 div:nth-child(3) .card:hover{
     transform: scale(0.95, 0.95);
 }
 
-div:nth-child(3) .card{
-    transition: 0.5s;
-}
+/*
 div:nth-child(3) .card div:last-of-type .container {
     text-align: center;
     width: 100%;
 }
+*/
 
+/*
 .mt-0 {
     margin-top: 80px !important;
 }
+*/
 
 .container-fluid header h2{
     font-family: 'League', cursive;
@@ -41,23 +48,12 @@ div:nth-child(3) .card div:last-of-type .container {
 }
 .card-text{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-shadow: none;
-}
-
-.carousel-caption h3 p{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bolder;
-    text-shadow: 
-    3px 3px 1px black,
-    5px 5px 2px black,
-    8px 8px 3px black;;
 }
 
 @media screen and (min-width: 1080px) {
         .carousel-item .carousel-caption p{
         font-family: 'Montserrat';
         font-size: 40px;
-        font-weight: bolder;
         text-shadow: 
         3px 3px 1px black,
         5px 5px 2px black,
@@ -69,13 +65,13 @@ div:nth-child(3) .card div:last-of-type .container {
     .carousel-item .carousel-caption h3{
     font-family: 'Montserrat';
     font-size: 40px;
-    font-weight: bolder;
     text-shadow: 
     3px 3px 1px black,
     5px 5px 2px black,
     8px 8px 3px white;;
 }
 }
+
 main div:nth-child(5){
     width: 100%;
 }
@@ -87,29 +83,28 @@ main div:nth-child(5){
     }
 }
 
-main div:nth-child(5){
-    width: 100%;
-}
 @media screen and (min-width: 1080px) {
     main div:nth-child(5){
         width: 50%;
         margin: 0 auto;
     }
 }
-main div:nth-child(4){
-    margin: 0 auto;
+
+/*
+main div:nth-child(5){
+    width: 100%;
 }
+
 main div:nth-child(4) > div > .card-group{
     background-color: #828f70;
 }
+
 .card-group > .card{
     margin: 15px;
     transform: none;
 }
+*/
 
-#exampleModal{
-    width: 100%;
-}
 .credit-card-div  span { padding-top:10px; }
 .credit-card-div img { padding-top:10px; }
 .credit-card-div .small-font { font-size:12px; }
